--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="video-wrapper">
-    <video autoplay poster="video/poster.jpg" style="width:100%;height:100%;">
+    <video poster="video/poster.jpg" style="width:100%;height:100%;">
       <source src=" video/video.mp4" type="video/mp4" />
       <source src="video/video.ogg" type="video/ogg" />
     </video>
